# jarvis-memory-repo

./: .gitignore  ADVERSARIAL_SECURITY_REVIEW.md  AGENTS.md  BUG_HUNT_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  JARVIS_MASTERPLAN.md  NEXT_SESSION_CHECKLIST.md  README.md  SESSION_MEMORY_2026-02-19.md  WORKFLOW.md  audit.py  audit_v2.py  ruff.toml  run_tests.py
engine/: README.md  pyproject.toml
engine/.hypothesis/constants/: 00543efb7bff19db  023aeafcc97e7261  055dc1188b2b20ab  06f03780a4600a3f  07d81952ab0a0344  08ecd3b41798c9a4  0990ca92d1fde082  0afb57340672e492  0bf9f64380070124  0cd5560688ae3596  1058a221037afb70  1115af700ed3879a  11a14371a4fc34bc  12f688232c473242  142fc067e9a67d81  1441632399b8e6cf  14c49a7e55e50052  1694450f11026f72  16f1c1562aa4ca17  185da03974dddb5e  19b546fbc652f336  1a8492ea3b5d9827  1ed13e2d39770a62  1f62bc2d97d66e13  1f9401259e4d10c3  2052f121c77b068e  230d3863673ca600  247d9cea55e47cd2  257bc9795e739029  2598dd132f71763a  26032448113e4013  264d88c939aaad0f  2780d19901e7033a  28aa1f5bf81f7e17  28f4e023eabf5b5a  2af349bb91d78ec6  2be545b9be25a9e9  2ca839180d62c6d8  2f79bd0ab23b763c  302a45a6c6a9fb63  (+152 more)
engine/patches/: 01_daemon_exception_handling.patch  02_nonce_cleanup_atomicity.patch  03_widget_thread_cleanup.patch  04_daemon_dedupe_optimization.patch  05_path_traversal_protection.patch
engine/src/jarvis_engine/: __init__.py  _bus.py  _cli_helpers.py  _compat.py  _constants.py  _db_pragmas.py  _fts_utils.py  _protocols.py  _shared.py  activity_feed.py  adapters.py  api_contracts.py  app.py  auto_ingest.py  automation.py  brain_memory.py  capability.py  cli_knowledge.py  cli_ops.py  cli_proactive.py  cli_security.py  cli_system.py  cli_tasks.py  cli_voice.py  command_bus.py  config.py  connectors.py  conversation_state.py  daemon_loop.py  ingest.py  (+47 more)
engine/src/jarvis_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine/tests/: conftest.py  test_action_auditor.py  test_activity_feed.py  test_adapters.py  test_adaptive_defense.py  test_agent_commands.py  test_agent_e2e.py  test_agent_executor.py  test_agent_handlers.py  test_agent_planner.py  test_agent_reflection.py  test_agent_state_store.py  test_agent_tools.py  test_alert_chain.py  test_alert_queue.py  test_api_contracts.py  test_app.py  test_approval_gate.py  test_asset_tool.py  test_attack_memory.py  test_auto_sync.py  test_automation.py  test_blender_tool.py  test_brain.py  test_brain_memory.py  test_calendar_tasks.py  test_capability.py  test_cli_providers.py  test_cli_system.py  test_cli_voice.py  test_codegen_api_validator.py  test_codegen_compile_fix_loop.py  test_codegen_nunit_generator.py  test_codegen_prompt_builder.py  test_command_bus.py  test_config.py  test_connectors.py  test_consolidator.py  test_containment.py  test_context_continuity.py  (+167 more)
(+641 files in other folders)
