[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-engine"
version = "0.1.0"
description = "Local-first Jarvis engine scaffold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "edge-tts>=7.2.7",
    "sentence-transformers>=5.0.0",
    "sqlite-vec>=0.1.6",
    "networkx>=3.1",
    "anthropic>=0.81.0",
    "ollama>=0.4.0",
    "icalendar>=7.0.1",
    "recurring-ical-events>=3.8.1",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
tasks = [
    "todoist-api-python",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
    "hypothesis>=6.112.0",
]

[project.scripts]
jarvis-engine = "jarvis_engine.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
