[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-engine"
version = "0.1.0"
description = "Local-first Jarvis engine scaffold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "edge-tts>=7.2.7",
    "sentence-transformers>=5.0.0",
    "sqlite-vec>=0.1.6",
    "networkx>=3.1",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.81.0",
]
calendar = [
    "icalendar>=7.0.1",
    "recurring-ical-events>=3.8.1",
]
harvesting = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]
tasks = [
    "todoist-api-python>=2.1.0",
]
proctitle = [
    "setproctitle>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
    "hypothesis>=6.112.0",
    "Pillow>=10.0.0",
]

[project.scripts]
jarvis-engine = "jarvis_engine.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-nauto --dist worksteal -q"
timeout = 30
